@@ -15,6 +15,10 @@
 	(quit_cb): Implement
 	(create_control_cb): Connect destroy signal of property control to
 	quit_cb
+	(get_factory_name):
+	(get_default_moniker):
+	(get_property_name): Use correct names when the full path was
+	specified for the executable
 
 	* Makefile.am (INCLUDES): Removed -DGLADE_DATADIR
 
